[DTSSTCI-578] Fix service name am-org-role-mapping-service

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -81,7 +81,7 @@ ccd-message-publisher:
         secretRef: "{{ .Values.global.postgresSecret }}"
         key: PASSWORD
 
-am-role-mapping-service:
+am-org-role-mapping-service:
   enabled: true
   java:
     image: 'hmctspublic.azurecr.io/am/org-role-mapping-service:latest'
