--- a/build.gradle
+++ b/build.gradle
@@ -499,6 +499,8 @@ dependencies {
   implementation group: 'org.json', name: 'json', version: '20231013'
   implementation group: 'jakarta.enterprise', name: 'jakarta.enterprise.cdi-api', version: '4.0.1'
 
+  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
+
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testImplementation 'com.github.hmcts:fortify-client:1.3.0:all'
 
