--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -98,21 +98,6 @@ am-org-role-mapping-service:
         secretRef: "{{ .Values.global.postgresSecret }}"
         key: PASSWORD
         disabled: false
-    keyVaults:
-      am:
-        secrets:
-          - name: app-insights-connection-string
-            alias: app-insights-connection-string
-          - name: am-org-role-mapping-service-s2s-secret
-            alias: AM_ORG_ROLE_MAPPING_SERVICE_SECRET
-          - name: role-assignment-service-LD-SDK-KEY
-            alias: LD_SDK_KEY
-          - name: orm-IDAM-CLIENT-ID
-            alias: ORM_IDAM_CLIENT_ID
-          - name: orm-IDAM-CLIENT-SECRET
-            alias: ORG_ROLE_MAPPING_IDAM_CLIENT_SECRET
-          - name: orm-IDAM-ADMIN-SECRET
-            alias: ORG_ROLE_MAPPING_IDAM_ADMIN_PASSWORD
     devcpuRequests: 500m
     devmemoryRequests: 1Gi
     devcpuLimits: 1
@@ -124,7 +109,7 @@ am-org-role-mapping-service:
       JUDICIAL_REF_APP_URL: http://rd-judicial-api-aat.service.core-compute-aat.internal
       ROLE_ASSIGNMENT_APP_URL: https://am-role-assignment-${SERVICE_FQDN}
       JUDICIAL_BOOKING_APP_URL: http://am-judicial-booking-service-aat.service.core-compute-aat.internal
-      LAUNCH_DARKLY_ENV: pr
+      LAUNCH_DARKLY_ENV: "{{ .Values.global.environment }}"
       AMQP_SHARED_ACCESS_KEY_NAME: RootManageSharedAccessKey
       AMQP_HOST: "sptribs-sb-preview.servicebus.windows.net"
       CRD_SUBSCRIPTION_NAME: "{{ .Release.Name}}-asb-crd-topic"
