[DTSSTCI-578] Retest without ORM

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -82,7 +82,7 @@ ccd-message-publisher:
         key: PASSWORD
 
 am-org-role-mapping-service:
-  enabled: true
+  enabled: false
   java:
     image: 'hmctspublic.azurecr.io/am/org-role-mapping-service:latest'
     ingressHost: am-org-role-mapping-service-${SERVICE_FQDN}
