--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -144,6 +144,7 @@ am-org-role-mapping-service:
       RUN_LD_ON_STARTUP: true
       TESTING_SUPPORT_ENABLED: true
       REFRESH_BULK_ASSIGNMENT_INCLUDE_BOOKINGS: true
+      DB_FEATURE_FLAG_ENABLE: st_cic_wa_1_0
 
 xui-webapp:
   nodejs:
