--- a/build.gradle
+++ b/build.gradle
@@ -419,6 +419,7 @@ dependencyManagement {
     //Override spring-security-rsa version and update org.bouncycastle:bcpkix-jdk18on for CVE-2023-33202
     dependency group:'org.springframework.security', name: 'spring-security-rsa', version: '1.1.3'
     dependency group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version: '1.77'
+    dependency group: 'org.camunda.connect', name: 'camunda-connect-connectors-all', version: '1.6.0'
 
     dependencySet(group: 'commons-fileupload', version: '1.5') {
       entry 'commons-fileupload'
@@ -433,6 +434,7 @@ repositories {
 }
 
 def versions = [
+  camunda           : '7.21.0',
   jackson           : '2.16.0',
   junit             : '5.10.3',
   junitPlatform     : '1.10.3',
@@ -501,6 +503,8 @@ dependencies {
 
   implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
 
+  implementation 'org.camunda.bpm:camunda-external-task-client:7.21.0'
+
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testImplementation 'com.github.hmcts:fortify-client:1.4.3:all'
 
@@ -523,6 +527,11 @@ dependencies {
   testImplementation group: 'io.rest-assured', name: 'rest-assured'
   testImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.2'
   testImplementation group: 'com.microsoft.playwright', name: 'playwright', version: '1.45.0'
+
+  testImplementation group: 'org.camunda.bpm.dmn', name: 'camunda-engine-dmn', version: "${versions.camunda}"
+  testImplementation group: 'org.camunda.bpm', name: 'camunda-engine-plugin-spin', version: "${versions.camunda}"
+  testImplementation group: 'org.camunda.bpm.assert', name: 'camunda-bpm-assert', version: '15.0.0'
+  testImplementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.21.0'
 
   testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   integrationTestImplementation sourceSets.main.runtimeClasspath
