[DTSSTCI-578] Configure reconfiguration and termination job to run every minute

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -62,6 +62,14 @@ wa:
     job:
       schedule: "*/1 * * * *"
 
+  wa-reconfiguration-batch:
+    job:
+      schedule: "*/1 * * * *"
+
+  wa-termination-batch:
+    job:
+      schedule: "*/1 * * * *"
+
   #disable wa db as we are using the postgres flexible server
   wa:
     postgresql:
