[DTSSTCI-578] Test initiation with 2 jobs

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -60,7 +60,9 @@ wa:
 
   wa-initiation-batch:
     job:
-      schedule: "*/1 * * * *"
+      schedule: "* * * * *"
+    job-2:
+      schedule: "* * * * * (sleep 30)"
 
   wa-reconfiguration-batch:
     job:
