--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -198,6 +198,8 @@ SERVICE_AUTH_MICROSERVICE: sptribs_case_api
 feature:
   security-classification:
     enabled: ${SECURITY_CLASSIFICATION:true}
+  migrate-global-search-task:
+    enabled: ${GLOBAL_SEARCH_MIGRATION_ENABLED:false}
 
 caseinfo:
   apps:
