--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -57,6 +57,12 @@ wa:
         AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
         AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
 
+  wa-task-management-api:
+    java:
+      environment:
+        ALLOWED_CASE_TYPES: wacasetype,st_cic
+        ALLOWED_JURISDICTIONS: wa, st_cic
+
   wa-workflow-api:
     java:
       environment:
