DTSSTCI-578 Deploy WA to Preview (#1860)
* [DTSSTCI-578] Updated WA release scripts and templates

* Bumping chart version/ fixing aliases

* [DTSSTCI-578] Add temporary cve suppression

* [DTSSTCI-578] Bump Java chart version

* [DTSSTCI-578] Revert Java chart version and correct other chart dependencies

* [DTSSTCI-578] Update Jenkinsfile_CNP and remove duplicate wa-task-batch-service

* [DTSSTCI-578] Temporarily remove Work Allocation services from Chart.yaml

* [DTSSTCI-578] Update Jenkins and rename pull scripts

* [DTSSTCI-578] Update camunda values in preview.yml

* [DTSSTCI-578] Reenable camunda values chart

* test new ccd definition importer version, ccd chart release

* updated em-ccdorc

* update em-stitching

* test with disabled em kvs

* [DTSSTCI-578] Add wa-chart amend service bus values in preview

* [DTSSTCI-578] Extend temporary suppressions for Azure CLI

* kv disabled

* db hosts

* [DTSSTCI-578] Rollback build.gradle and Jenkinsfile_CNP

* globals

* fix name

* [DTSSTCI-578] Rollback and add minimum wa dependencies for Chart.yaml and values.preview.template.yaml

* switch postgres

* [DTSSTCI-578] Update Chart.yaml and add values.wa.preview.template.yaml

* [DTSSTCI-578] Add publish to camunda for missed events

* [DTSSTCI-578] Update values.preview.template.yaml and duplicate into values.wa.preview.template.yaml

* [DTSSTCI-578] Update Chart.yaml to use patch-level version

* fix and test em auth

* role assignment

* data store

* overwrite secrets fix (still an issue even with these updated versions)

* [DTSSTCI-578] Copy across Ccd-data-store changes from preview

* clear

* cleanup

* switch sptribs

* [DTSSTCI-578] Fix naming for ccd-case-events topic, and initial config for postgres flexibleserver

* Bumping chart version/ fixing aliases

* [DTSSTCI-578] Add wa-task-management-api secrets

* [DTSSTCI-578] Add wa-workflow-api secrets

* [DTSSTCI-578] Update wa.

--- a/src/integrationTest/resources/application.yaml
+++ b/src/integrationTest/resources/application.yaml
@@ -107,6 +107,8 @@ feature:
     enabled: ${SECURITY_CLASSIFICATION:false}
   access-profiles:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
+  wa:
+    enabled: ${WA_FEATURE_ENABLED:false}
 
 caseinfo:
   apps:
