--- a/src/integrationTest/resources/application.yaml
+++ b/src/integrationTest/resources/application.yaml
@@ -104,7 +104,7 @@ SERVICE_AUTH_MICROSERVICE: sptribs_case_api
 
 feature:
   security-classification:
-    enabled: ${SECURITY_CLASSIFICATION:false}
+    enabled: ${SECURITY_CLASSIFICATION:true}
   access-profiles:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
   wa:
