Fix s2s with task management and task monitor services

--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -26,6 +26,7 @@ uk:
 
 s2s:
   name: ccd_data
+  task_management_name: wa_task_management_api
 
 idam:
   api:
@@ -34,7 +35,6 @@ idam:
     url: ${TEST_S2S_URL:http://rpe-service-auth-provider-aat.service.core-compute-aat.internal}
     secret: ${S2S_SECRET:dummy}
     microservice: sptribs_case_api
-    taskmanagementsecret: ${S2S_SECRET_TASK_MANAGEMENT_API:dummy}
   solicitor:
     username: ${IDAM_SOLICITOR_USERNAME:dummysolicitor@test.com}
     password: ${IDAM_SOLICITOR_PASSWORD:dummy}
