--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -1,6 +1,8 @@
 java:
   environment:
     WA_FEATURE_ENABLED: true
+    TASK_MANAGEMENT_API_URL: http://{{ .Release.Name }}-wa-task-management-api
+    TASK_MONITOR_API_URL: http://{{ .Release.Name }}-wa-task-monitor
 
 servicebus:
   enabled: true
