--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -120,6 +120,6 @@ caseinfo:
         - CIC
 
 wa_task_monitor_api:
-  url: http://sptribs-case-api-pr-1869-wa-task-monitor
+  url: ${TASK_MONITOR_API_URL:http://wa-task-monitor-aat.service.core-compute-aat.internal}
 wa_task_management_api:
-  url: http://sptribs-case-api-pr-1869-wa-task-management-api
+  url: ${TASK_MANAGEMENT_API_URL:http://wa-task-management-api-aat.service.core-compute-aat.internal}
