--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -41,6 +41,9 @@ idam:
   caseworker:
     username: ${IDAM_CASEWORKER_USERNAME:dummycaseworker@test.com}
     password: ${IDAM_CASEWORKER_PASSWORD:dummy}
+  waseniorcaseworker:
+    username: ${IDAM_WA_SENIOR_CASEWORKER_USERNAME:dummywaseniorcaseworker@test.com}
+    password: ${IDAM_WA_SENIOR_CASEWORKER_PASSWORD:dummy}
   systemupdate:
     username: ${IDAM_SYSTEM_UPDATE_USERNAME:dummysystemupdate@test.com}
     password: ${IDAM_SYSTEM_UPDATE_PASSWORD:dummy}
