Change TEST_URL to use CASE_API_URL

--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -9,7 +9,7 @@ azure:
   application-insights:
     instrumentation-key: functional-test
 
-test-url: ${TEST_URL:http://localhost:4013}
+test-url: ${CASE_API_URL:http://localhost:4013}
 
 case-flags:
   supplementary-data:
