--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -215,3 +215,8 @@ caseinfo:
         submitEvent: citizen-cic-submit-dss-application
       caseTypeOfApplication:
         - CIC
+
+wa_task_monitor_api:
+  url: http://wa-task-monitor-aat.service.core-compute-aat.internal
+wa_task_management_api:
+  url: http://wa-task-management-api-aat.service.core-compute-aat.internal
