--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -111,6 +111,8 @@ feature:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
   wa:
     enabled: ${WA_FEATURE_ENABLED:false}
+    enabledEvents: ${WA_ENABLED_EVENTS:}
+
   migrate-global-search-task:
     enabled: ${GLOBAL_SEARCH_MIGRATION_ENABLED:false}
     caseReference: ${GLOBAL_SEARCH_MIGRATION_TEST_CASE_REF:}
