Add condition to parallelise functional tests when WA is enabled

--- a/build.gradle
+++ b/build.gradle
@@ -119,11 +119,14 @@ test {
 }
 
 task functional(type: Test) {
+  def waEnabled = System.getenv('WA_FEATURE_ENABLED')
+  if (waEnabled == 'true') {
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+  }
   description = "Runs functional tests"
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
-  maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED','--add-opens=java.base/java.util=ALL-UNNAMED']
 }
 
