--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -46,6 +46,10 @@ idam:
     username: ${IDAM_WA_SENIOR_CASEWORKER_USERNAME:dummywaseniorcaseworker@test.com}
     password: ${IDAM_WA_SENIOR_CASEWORKER_PASSWORD:dummy}
     uid: ${WA_SENIOR_CASEWORKER_UID:dummy}
+  waregionalhearingcentreteamlead:
+    username: ${IDAM_WA_REGIONAL_HEARING_CENTRE_TEAM_LEAD_USERNAME:dummywaregionalhearingcentreteamlead@test.com}
+    password: ${IDAM_WA_REGIONAL_HEARING_CENTRE_TEAM_LEAD_PASSWORD:dummy}
+    uid: ${IDAM_WA_REGIONAL_HEARING_CENTRE_TEAM_LEAD_UID:dummy}
   systemupdate:
     username: ${IDAM_SYSTEM_UPDATE_USERNAME:dummysystemupdate@test.com}
     password: ${IDAM_SYSTEM_UPDATE_PASSWORD:dummy}
