DTSSTCI-1211: Enable deployment of DMN to prod and ensure correct definition file changes are deployed in prod

--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -115,6 +115,7 @@ feature:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
   wa:
     enabled: ${WA_FEATURE_ENABLED:false}
+    functional-tests-enabled: ${WA_FUNCTIONAL_TESTS_ENABLED:false}
   migrate-global-search-task:
     enabled: ${GLOBAL_SEARCH_MIGRATION_ENABLED:false}
     caseReference: ${GLOBAL_SEARCH_MIGRATION_TEST_CASE_REF:}
