--- a/build.gradle
+++ b/build.gradle
@@ -119,7 +119,7 @@ test {
 }
 
 task functional(type: Test) {
-  if (System.getenv('WA_FEATURE_ENABLED') == 'true') {
+  if (System.getenv('WA_FUNCTIONAL_TESTS_ENABLED') == 'true') {
     maxParallelForks = Runtime.runtime.availableProcessors()
   }
   description = "Runs functional tests"
