--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -200,6 +200,7 @@ feature:
     enabled: ${SECURITY_CLASSIFICATION:true}
   wa:
     enabled: ${WA_FEATURE_ENABLED:false}
+    functional-tests-enabled: ${WA_FUNCTIONAL_TESTS_ENABLED:false}
   migrate-global-search-task:
     enabled: ${GLOBAL_SEARCH_MIGRATION_ENABLED:false}
     caseReference: ${GLOBAL_SEARCH_MIGRATION_TEST_CASE_REF:}
