--- a/charts/sptribs-case-api/values.yaml
+++ b/charts/sptribs-case-api/values.yaml
@@ -85,4 +85,4 @@ java:
     S2S_AUTHORISED_SERVICES: ccd_definition,ccd_data,xui_webapp,sptribs_case_api,ccd_gw,sptribs_frontend,sptribs_dss_update_case_web
     CAMUNDA_BASE_URL: http://camunda-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
 
-    WA_FEATURE_ENABLED: true
+    WA_FEATURE_ENABLED: false
