[DTSSTCI-1228] Try workaround for failing camunda image

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -43,6 +43,10 @@ global:
 wa:
   enabled: true
 
+  camunda:
+    java:
+      image: hmctsprivatetemp.azurecr.io/camunda/bpm:latest
+
   wa-case-event-handler:
     java:
       secrets:
