[DTSSTCI-1228] Try workaround for failing camunda image

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -43,7 +43,7 @@ global:
 wa:
   enabled: true
 
-  camunda:
+  camunda-bpm:
     java:
       image: hmctsprivatetemp.azurecr.io/camunda/bpm:latest
 
