--- a/charts/sptribs-case-api/Chart.yaml
+++ b/charts/sptribs-case-api/Chart.yaml
@@ -53,8 +53,8 @@ dependencies:
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: wa.enabled
   - name: servicebus
-    version: ~1.0.6
-    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    version: ~1.1.0
+    repository: 'oci://hmctspublic.azurecr.io/helm'
     condition: servicebus.enabled
   - name: postgresql
     version: ~1.0.2
