--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
   id 'org.owasp.dependencycheck' version '9.0.7'
   id 'org.sonarqube' version '4.4.1.3373'
   id 'io.spring.dependency-management' version '1.1.7'
-  id 'org.springframework.boot' version '3.2.5'
+  id 'org.springframework.boot' version '3.4.4'
   id 'com.github.ben-manes.versions' version '0.50.0'
   id 'hmcts.ccd.sdk' version '5.5.16'
   id "au.com.dius.pact" version "4.3.10"
@@ -92,6 +92,15 @@ configurations {
   integrationTestRuntime.extendsFrom testRuntime
   cftlibTestImplementation.extendsFrom testImplementation
   cftlibTestRuntime.extendsFrom testRuntime
+}
+
+// Fix for CVE-2024-45772
+configurations.configureEach {
+  resolutionStrategy.eachDependency {
+    if (requested.group == 'org.apache.lucene' && requested.name != 'lucene-analyzers-common') {
+      useVersion '9.12.0'
+    }
+  }
 }
 
 
@@ -336,8 +345,8 @@ dependencies {
   implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.22.0'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.22.0'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.1.34'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.34'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.1.35'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.35'
   implementation group: 'org.elasticsearch', name: 'elasticsearch' , version: '7.17.27'
   implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
