--- a/build.gradle
+++ b/build.gradle
@@ -311,7 +311,7 @@ ext.libraries = [
 
 dependencies {
 // uncomment for local version
-// implementation group: 'com.github.hmcts', name: 'ccd-config-generator', version: 'DEV-SNAPSHOT'
+  implementation group: 'com.github.hmcts', name: 'ccd-config-generator', version: '5.5.18'
 
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
