--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.7'
   id 'org.springframework.boot' version '3.2.5'
   id 'com.github.ben-manes.versions' version '0.50.0'
-  id 'hmcts.ccd.sdk' version '5.5.18'
+  id 'hmcts.ccd.sdk' version '5.5.16'
   id "au.com.dius.pact" version "4.3.10"
   id 'com.github.hmcts.rse-cft-lib' version '0.19.1534'
 }
@@ -311,7 +311,7 @@ ext.libraries = [
 
 dependencies {
 // uncomment for local version
-  implementation group: 'com.github.hmcts', name: 'ccd-config-generator', version: '5.5.18'
+// implementation group: 'com.github.hmcts', name: 'ccd-config-generator', version: 'DEV-SNAPSHOT'
 
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
