--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.7'
   id 'org.springframework.boot' version '3.2.5'
   id 'com.github.ben-manes.versions' version '0.50.0'
-  id 'hmcts.ccd.sdk' version '5.5.18'
+  id 'hmcts.ccd.sdk' version '5.5.19'
   id "au.com.dius.pact" version "4.3.10"
   id 'com.github.hmcts.rse-cft-lib' version '0.19.1534'
 }
@@ -94,9 +94,9 @@ configurations {
   cftlibTestRuntime.extendsFrom testRuntime
 }
 
-tasks.withType(AbstractArchiveTask).configureEach {
+/*tasks.withType(AbstractArchiveTask).configureEach {
   duplicatesStrategy = DuplicatesStrategy.INCLUDE
-}
+}*/
 
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
