--- a/build.gradle
+++ b/build.gradle
@@ -323,8 +323,6 @@ dependencies {
   }
 
   implementation 'io.swagger:swagger-annotations:1.6.15'
-  implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-  implementation group: 'org.apache.groovy', name: 'groovy', version: '4.0.24'
   implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.6'
   implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.6'
   implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.9.5-SPRING2'
@@ -350,16 +348,14 @@ dependencies {
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '5.2.1-RELEASE'
   implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.8.0'
   implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-  implementation group: 'org.json', name: 'json', version: '20231013'
-  implementation group: 'jakarta.enterprise', name: 'jakarta.enterprise.cdi-api', version: '4.1.0'
-
+  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
   implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.0'
-
   implementation 'org.camunda.bpm:camunda-external-task-client:7.21.0'
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testImplementation 'com.github.hmcts:fortify-client:1.4.8:all'
 
+  testImplementation group: 'jakarta.enterprise', name: 'jakarta.enterprise.cdi-api', version: '4.1.0'
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
