--- a/.github/workflows/ccd-diff.yml
+++ b/.github/workflows/ccd-diff.yml
@@ -10,25 +10,39 @@ jobs:
   buildBranch:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-java@v4
+        with:
+          distribution: corretto
+          java-version: 21
       - uses: actions/checkout@v4
         with:
           path: build/branch
+      - name: Build
+        run: ./gradlew generateCCDConfig
+        working-directory: build/branch
       - uses: actions/upload-artifact@v4
         with:
           name: branch
-          path: build/branch/definitions/benefit/sheets/*
+          path: build/branch/build/definitions
 
   buildMaster:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-java@v4
+        with:
+          distribution: corretto
+          java-version: 21
       - uses: actions/checkout@v4
         with:
           ref: master
           path: build/master
+      - name: Build
+        run: ./gradlew generateCCDConfig
+        working-directory: build/master
       - uses: actions/upload-artifact@v4
         with:
           name: master
-          path: build/master/definitions/benefit/sheets/*
+          path: build/master/build/definitions
 
   report:
     runs-on: ubuntu-latest
@@ -36,7 +50,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 20
       - uses: actions/download-artifact@v4
         with:
           name: branch
