--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,10 @@ spring:
     multipart:
       max-file-size: 500MB
       max-request-size: 500MB
+  datasource:
+    url: jdbc:postgresql://localhost:6432/sptribs
+    username: postgres
+    password: postgres
 
 logging:
   level:
