--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,8 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.7'
   id 'org.springframework.boot' version '3.4.5'
   id 'com.github.ben-manes.versions' version '0.50.0'
-  id 'hmcts.ccd.sdk' version '5.5.21'
   id "au.com.dius.pact" version "4.3.10"
-  id 'com.github.hmcts.rse-cft-lib' version '0.19.1701'
+  id 'com.github.hmcts.rse-cft-lib' version 'wa-alpha-1'
 }
 
 apply plugin: 'cz.habarta.typescript-generator'
@@ -501,6 +500,9 @@ ccd {
 
 bootWithCCD {
     environment 'XUI_JURISDICTIONS', 'ST_CIC'
+    environment 'WA_S2S_AUTHORIZED_SERVICES', 'sptribs_case_api'
+    environment 'WA_TASK_MANAGEMENT_API_URL', 'http://localhost:8087/'
+
     group = 'ccd tasks'
     dependsOn(loadEnvSecrets)
 
