exclude RetiredFields.java from testing & revert test changes made to it

--- a/build.gradle
+++ b/build.gradle
@@ -215,7 +215,8 @@ def sonarExclusions = [
   '**/uk/gov/hmcts/sptribs/CaseApiApplication.java',
   '**/uk/gov/hmcts/sptribs/notification/GetAllTemplatesFromNotify.java',
   '**/uk/gov/hmcts/sptribs/ciccase/model/UserRolesForAccessProfiles.java',
-  '**/uk/gov/hmcts/sptribs/common/config/**'
+  '**/uk/gov/hmcts/sptribs/common/config/**',
+  '**/uk/gov/hmcts/sptribs/ciccase/model/RetiredFields.java'
 ]
 
 sonarqube {
