--- a/build.gradle
+++ b/build.gradle
@@ -355,6 +355,7 @@ dependencies {
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.9'
+  testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.17'
 
   testImplementation group: 'jakarta.enterprise', name: 'jakarta.enterprise.cdi-api', version: '4.1.0'
   testImplementation libraries.junit5
